# bpkit

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  flake.nix  pyproject.toml
.claude/commands/: bp.analyze.md  bp.checklist.md  bp.clarify.md  bp.decompose.md  bp.sync.md
.serena/: project.yml
.serena/memories/: bp-kit-project-overview.md  development-workflow.md  principle-extraction-research.md  project-overview.md
.specify/changelog/: 2025-10-11-feature-002-quality-commands.md
.specify/deck/: README.md  pitch-deck-template.md
.specify/features/: README.md
.specify/memory/: constitution.md
.specify/scripts/bp/: README.md  bp-common.sh  decompose-setup.sh
.specify/templates/: feature-constitution-template.md  pitch-deck-template.md  strategic-constitution-template.md
specs/001-bp-kit-build/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-bp-kit-build/checklists/: requirements.md
specs/001-bp-kit-build/contracts/: cli-interface.md  github-raw-api.yaml
specs/002-bp-kit-quality/: MANUAL_TESTING.md  PERFORMANCE.md  VALIDATION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-bp-kit-quality/checklists/: requirements.md
specs/002-bp-kit-quality/contracts/: slash-commands.yaml
specs/003-implement-bp-decompose/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-implement-bp-decompose/checklists/: requirements.md
specs/003-implement-bp-decompose/contracts/: feature-constitution.yaml  sequoia-template.yaml  strategic-constitution.yaml
src/bpkit_cli/: __init__.py
src/bpkit_cli/commands/: __init__.py  analyze.py  check.py  checklist.py  clarify.py  decompose.py  init.py
src/bpkit_cli/core/: __init__.py  ambiguity_detector.py  conflict_detector.py  constitution_generator.py  entity_extractor.py  feature_detector.py  file_decomposition.py  installer.py  interactive_decomposition.py  link_validator.py  markdown_parser.py  pdf_decomposition.py  pdf_extractor.py  templates.py  (+5 more)
tests/: conftest.py
tests/integration/: test_full_workflow.py  test_init_overwrite.py
tests/unit/: test_installer.py  test_templates.py
(+19 files in other folders)
